Adds click handler for when a space is clicked
- Adds basic js files and click handler for when a tile
 is clicked.
- Edits tile classes in index.html for easier handling

--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
   <div class= "container my-2">
     <div class = "game-board">
       <div class="row">
-        <div id=0 class="col-4 tile">0</div>
-        <div id=1 class="col-4 tile">1</div>
-        <div id=2 class="col-4 tile">2</div>
+        <div id="0" class="col-4 tile"></div>
+        <div id="1" class="col-4 tile"></div>
+        <div id="2" class="col-4 tile"></div>
 
-        <div id=3 class="col-4 tile">3</div>
-        <div id=4 class="col-4 tile">4</div>
-        <div id=5 class="col-4 tile">5</div>
+        <div id="3" class="col-4 tile"></div>
+        <div id="4" class="col-4 tile"></div>
+        <div id="5" class="col-4 tile"></div>
 
-        <div id=6 class="col-4 tile">6</div>
-        <div id=7 class="col-4 tile">7</div>
-        <div id=8 class="col-4 tile">8</div>
+        <div id="6" class="col-4 tile"></div>
+        <div id="7" class="col-4 tile"></div>
+        <div id="8" class="col-4 tile"></div>
       </div>
     </div>
 </div>
