--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
   <div class= "container my-2">
     <div class = "game-board">
       <div class="row">
-        <div id="0" class="col-4 tile"></div>
-        <div id="1" class="col-4 tile"></div>
-        <div id="2" class="col-4 tile"></div>
+        <div id="0" class="col-4 cell"></div>
+        <div id="1" class="col-4 cell"></div>
+        <div id="2" class="col-4 cell"></div>
 
-        <div id="3" class="col-4 tile"></div>
-        <div id="4" class="col-4 tile"></div>
-        <div id="5" class="col-4 tile"></div>
+        <div id="3" class="col-4 cell"></div>
+        <div id="4" class="col-4 cell"></div>
+        <div id="5" class="col-4 cell"></div>
 
-        <div id="6" class="col-4 tile"></div>
-        <div id="7" class="col-4 tile"></div>
-        <div id="8" class="col-4 tile"></div>
+        <div id="6" class="col-4 cell"></div>
+        <div id="7" class="col-4 cell"></div>
+        <div id="8" class="col-4 cell"></div>
       </div>
     </div>
 </div>
