--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
       </div>
     </div>
 </div>
+<div class="notifications-window">
+  <p class="notifications">Player X Goes First</p>
+<div>
 
 <!--Footer borroed from GA pre-course work -->
   <footer>
