--- a/index.html
+++ b/index.html
@@ -34,13 +34,41 @@
       </div>
     </div>
 </div>
+
 <div class="notifications-window">
   <p class="notifications">Player X Goes First</p>
 <div>
 
+<button class="new-game-button">New Game</button>
+
+<p id="user-message"></p>
+
+<form id="sign-up-form">
+  <input name="credentials[email]" type="email" placeholder="Email"/>
+  <input name="credentials[password]" type="password" placeholder="Password"/>
+  <input name="credentials[password_confirmation]" type="password" placeholder="password confirmation"/>
+  <input type="submit" value="Sign-Up"/>
+</form>
+
+<form id="sign-in-form">
+    <input name="credentials[email]" type="email" placeholder="Email"/>
+    <input name="credentials[password]" type="password" placeholder="Password"/>
+    <input type="submit" value="Sign-In"/>
+</form>
+
+<form id="change-password-form">
+    <input name="passwords[old]" type="password" placeholder="Old Password"/>
+    <input name="passwords[new]" type="password" placeholder="New Password"/>
+    <input type="submit" value="Change Password"/>
+</form>
+
+<form id="sign-out-form">
+  <input type="submit" value="Sign Out"/>
+</form>
+
 <!--Footer borroed from GA pre-course work -->
   <footer>
-		<p class="message">Created with by Nathan J Fee at GA</p>
+		<p class="message">Created by Nathan J Fee at GA</p>
 	</footer>
 
     </body>
