--- a/index.html
+++ b/index.html
@@ -13,63 +13,80 @@
     </head>
     <body>
 
+      <!-- Code from Bootstrap, Image and text navbar -->
+      <nav class="navbar navbar-light bg-light">
+        <span class="navbar-text">
+          <img src="https://desenio.com/bilder/artiklar/zoom/7805_1.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
+          Tic-Tac-Toe
+        </span>
+
+        <form id="change-password-form" class="hidden">
+            <input name="passwords[old]" type="password" placeholder="Old Password"/>
+            <input name="passwords[new]" type="password" placeholder="New Password"/>
+            <input type="submit" value="Change Password"/>
+        </form>
+
+        <form id="sign-out-form" class="hidden">
+          <input type="submit" value="Sign Out"/>
+        </form>
+      </nav>
+
   <header>
     <h1>Tic-Tac-Toe</h1>
   </header>
 
-  <div class= "container my-2">
-    <div class = "game-board">
-      <div class="row">
-        <div id="0" class="col-4 cell"></div>
-        <div id="1" class="col-4 cell"></div>
-        <div id="2" class="col-4 cell"></div>
+  <main>
+    <div class= "container my-2">
+      <div id= 'game-board' class="hidden">
+        <div class="row">
+          <div id="0" class="col-4 cell"></div>
+          <div id="1" class="col-4 cell"></div>
+          <div id="2" class="col-4 cell"></div>
 
-        <div id="3" class="col-4 cell"></div>
-        <div id="4" class="col-4 cell"></div>
-        <div id="5" class="col-4 cell"></div>
+          <div id="3" class="col-4 cell"></div>
+          <div id="4" class="col-4 cell"></div>
+          <div id="5" class="col-4 cell"></div>
 
-        <div id="6" class="col-4 cell"></div>
-        <div id="7" class="col-4 cell"></div>
-        <div id="8" class="col-4 cell"></div>
+          <div id="6" class="col-4 cell"></div>
+          <div id="7" class="col-4 cell"></div>
+          <div id="8" class="col-4 cell"></div>
+        </div>
+
+        <div class="notifications-window">
+          <p class="notifications">Player X Goes First</p>
+        </div>
       </div>
+  </div>
+      <button id="new-game-button" class="hidden">New Game</button>
+
+    <form id="sign-up-form" class="sign-up-display"> Sign-up
+      <input name="credentials[email]" type="email" placeholder="Email"/>
+      <input name="credentials[password]" type="password" placeholder="Password"/>
+      <input name="credentials[password_confirmation]" type="password" placeholder="password confirmation"/>
+      <input type="submit" value="Submit"/>
+    </form>
+
+    <form id="sign-in-form" class="sign-in-display hidden"> Sign-in
+        <input name="credentials[email]" type="email" placeholder="Email"/>
+        <input name="credentials[password]" type="password" placeholder="Password"/>
+        <input type="submit" value="Submit"/>
+    </form>
+
+    <div class="user-message-display">
+      <p id="user-message"></p>
     </div>
-</div>
 
-<div class="notifications-window">
-  <p class="notifications">Player X Goes First</p>
-<div>
+    <div class="swap-form-display">
+      <p class="swap-form-message">Already have an account?</p>
+      <a href="#" class="sign-in-button">Sign-in</a>
+      <a href="#" class="sign-up-button hidden">Sign-up</a>
+    </div>
 
-<button class="new-game-button">New Game</button>
-
-<p id="user-message"></p>
-
-<form id="sign-up-form">
-  <input name="credentials[email]" type="email" placeholder="Email"/>
-  <input name="credentials[password]" type="password" placeholder="Password"/>
-  <input name="credentials[password_confirmation]" type="password" placeholder="password confirmation"/>
-  <input type="submit" value="Sign-Up"/>
-</form>
-
-<form id="sign-in-form">
-    <input name="credentials[email]" type="email" placeholder="Email"/>
-    <input name="credentials[password]" type="password" placeholder="Password"/>
-    <input type="submit" value="Sign-In"/>
-</form>
-
-<form id="change-password-form">
-    <input name="passwords[old]" type="password" placeholder="Old Password"/>
-    <input name="passwords[new]" type="password" placeholder="New Password"/>
-    <input type="submit" value="Change Password"/>
-</form>
-
-<form id="sign-out-form">
-  <input type="submit" value="Sign Out"/>
-</form>
-
+  </main>
 <!--Footer borroed from GA pre-course work -->
-  <footer>
-		<p class="message">Created by Nathan J Fee at GA</p>
-	</footer>
+  <footer class="navbar fixed-bottom navbar-light bg-light">
+    <p class="message">Created by Nathan J Fee at GA</p>
+  </footer>
 
     </body>
 </html>
