--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
 
   <main>
     <div class= "container my-2">
-      <div id= 'game-board' class="hidden">
-        <div class="row">
+        <div id= 'game-board' class="row hidden">
           <div id="0" class="col-4 cell"></div>
           <div id="1" class="col-4 cell"></div>
           <div id="2" class="col-4 cell"></div>
@@ -50,13 +49,13 @@
           <div id="6" class="col-4 cell"></div>
           <div id="7" class="col-4 cell"></div>
           <div id="8" class="col-4 cell"></div>
-        </div>
 
-        <div class="notifications-window">
-          <p class="notifications">Player X Goes First</p>
+          <div class="notifications-window">
+            <p class="notifications">Player X Goes First</p>
+          </div>
         </div>
       </div>
-  </div>
+
       <button id="new-game-button" class="hidden">New Game</button>
 
     <form id="sign-up-form" class="sign-up-display"> Sign-up
