--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </header>
 
   <main>
-    <div class= "container my-2">
+    <div class= "game-area container my-2">
         <div id= 'game-board' class="row hidden">
           <div id="0" class="col-4 cell"></div>
           <div id="1" class="col-4 cell"></div>
@@ -54,9 +54,8 @@
             <p class="notifications">Player X Goes First</p>
           </div>
         </div>
+        <button id="new-game-button" class="game-button hidden">New Game</button>
       </div>
-
-      <button id="new-game-button" class="hidden">New Game</button>
 
     <form id="sign-up-form" class="sign-up-display"> Sign-up
       <input name="credentials[email]" type="email" placeholder="Email"/>
