Changes user messages
- changes wording of user messages to be shorter.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <div id="8" class="col-4 cell"></div>
 
           <div class="notifications-window">
-            <p class="notifications">Player X Goes First</p>
+            <p class="notifications"></p>
           </div>
         </div>
         <button id="new-game-button" class="game-button hidden">New Game</button>
