Adds dropdown feature
- Adds dropdown when signed-in, with title as user email
- Moves sign-out to dropdown
- Moves change-password to dropdown
- Adds selection for game stats to dropdown (no functionality)

--- a/index.html
+++ b/index.html
@@ -13,22 +13,25 @@
     </head>
     <body>
 
-      <!-- Code from Bootstrap, Image and text navbar -->
-      <nav class="navbar navbar-light bg-light">
-        <span class="navbar-text">
-          <img src="https://desenio.com/bilder/artiklar/zoom/7805_1.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
-          Tic-Tac-Toe
-        </span>
-
-        <form id="change-password-form" class="hidden">
-            <input name="passwords[old]" type="password" placeholder="Old Password"/>
-            <input name="passwords[new]" type="password" placeholder="New Password"/>
-            <input type="submit" value="Change Password"/>
-        </form>
-
-        <form id="sign-out-form" class="hidden">
-          <input type="submit" value="Sign Out"/>
-        </form>
+        <nav class="navbar navbar-expand navbar-light bg-light">
+          <span class="navbar-text">
+            <img src="https://desenio.com/bilder/artiklar/zoom/7805_1.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
+            Tic-Tac-Toe
+          </span>
+          <div class="collapse navbar-collapse justify-content-end mr-5" id="navbarNavDropdown">
+            <ul class="navbar-nav hidden">
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  UserName
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <a id="sign-out-link" class="dropdown-item" href="#">Sign-out</a>
+                  <a class="dropdown-item" href="#" data-toggle="modal" data-target="#changePasswordModal">Change password</a>
+                  <a class="dropdown-item" href="#">Game Stats</a>
+                </div>
+              </li>
+            </ul>
+          </div>
       </nav>
 
   <header>
@@ -69,6 +72,38 @@
         <input name="credentials[password]" type="password" placeholder="Password"/>
         <input type="submit" value="Submit"/>
     </form>
+
+
+<!-- Button trigger modal -->
+<!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+  Launch demo modal
+</button> -->
+
+<!-- Modal -->
+<div class="modal fade" id="changePasswordModal" tabindex="-1" role="dialog" aria-labelledby="changePasswordModal" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalCenterTitle">Change Password</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+
+      <div class="modal-body">
+        <form id="change-password-form">
+            <input name="passwords[old]" type="password" placeholder="Old Password"/>
+            <input name="passwords[new]" type="password" placeholder="New Password"/>
+        </form>
+      </div>
+
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="submit" form="change-password-form" class="btn btn-primary">Submit</button>
+      </div>
+    </div>
+  </div>
+</div>
 
     <div class="user-message-display">
       <p id="user-message"></p>
