Changes occurrences of "gameStats" to "userStats"
- Changes occurrences of "gameStats" to "userStats" to better reflect
  data being gathered

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a id="sign-out-link" class="dropdown-item" href="#">Sign-out</a>
             <a class="dropdown-item" href="#" data-toggle="modal" data-target="#changePasswordModal">Change password</a>
-            <a id="game-stats-link"class="dropdown-item" href="#" data-toggle="modal" data-target="#gameStatsModal">Game Stats</a>
+            <a id="user-stats-link"class="dropdown-item" href="#" data-toggle="modal" data-target="#userStatsModal">Game Stats</a>
           </div>
         </li>
       </ul>
@@ -101,18 +101,18 @@
       </div>
     </div>
 
-    <!-- Game Stats Modal -->
-    <div class="modal fade" id="gameStatsModal" tabindex="-1" role="dialog" aria-labelledby="gameStatsModal" aria-hidden="true">
+    <!-- User Stats Modal -->
+    <div class="modal fade" id="userStatsModal" tabindex="-1" role="dialog" aria-labelledby="userStatsModal" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="gameStatsModalCenterTitle">Game Stats</h5>
+            <h5 class="modal-title" id="userStatsModalCenterTitle">User Stats</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
 
-          <div id="game-stats-viewer" class="modal-body">
+          <div id="user-stats-viewer" class="modal-body">
 
           </div>
 
