--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
               <input name="passwords[old]" type="password" placeholder="Old Password" />
               <input name="passwords[new]" type="password" placeholder="New Password" />
             </form>
+            <div id="alert-message"></div>
           </div>
 
           <div class="modal-footer">
