Adds a title to the page
- Changes the page title from example to tic-tac-toe.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Example</title>
+  <title>Tic-Tac-Toe</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Do not add `link` tags-->
@@ -45,17 +45,17 @@
 
     <div class="embed-responsive embed-responsive-1by1 game-area hidden">
       <div id='game-board' class="embed-responsive-item game-board hidden">
-        <div id="0" class="cell"> </div>
-        <div id="1" class="cell"> </div>
-        <div id="2" class="cell"> </div>
+        <div id="0" class="cell"></div>
+        <div id="1" class="cell"></div>
+        <div id="2" class="cell"></div>
 
-        <div id="3" class="cell"> </div>
-        <div id="4" class="cell"> </div>
-        <div id="5" class="cell"> </div>
+        <div id="3" class="cell"></div>
+        <div id="4" class="cell"></div>
+        <div id="5" class="cell"></div>
 
-        <div id="6" class="cell"> </div>
-        <div id="7" class="cell"> </div>
-        <div id="8" class="cell"> </div>
+        <div id="6" class="cell"></div>
+        <div id="7" class="cell"></div>
+        <div id="8" class="cell"></div>
       </div>
     </div>
     <div class="notifications-window">
