Adds feature to disable new game button
- Adds disable class to button after clicked
- Removes disable class after a cell is clicked

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="notifications-window">
       <p class="notifications"></p>
     </div>
-    <button id="new-game-button" class="game-button hidden">New Game</button>
+    <button id="new-game-button" class="btn game-button hidden">New Game</button>
 
     <form id="sign-up-form" class="sign-up-display"> Sign-up
       <input name="credentials[email]" type="email" placeholder="Email" />
