Adds bootstrap button styling to buttons
- Adds bootstrap button styling to all buttons
- Removes css styling previously added for buttons

--- a/index.html
+++ b/index.html
@@ -61,19 +61,19 @@
     <div class="notifications-window">
       <p class="notifications"></p>
     </div>
-    <button id="new-game-button" class="btn game-button hidden">New Game</button>
+    <button id="new-game-button" class="btn btn-secondary game-button hidden">New Game</button>
 
     <form id="sign-up-form" class="sign-up-display"> Sign-up
       <input name="credentials[email]" type="email" placeholder="Email" />
       <input name="credentials[password]" type="password" placeholder="Password" />
       <input name="credentials[password_confirmation]" type="password" placeholder="password confirmation" />
-      <input type="submit" value="Submit" class="submit"/>
+      <input type="submit" value="Submit" class="submit btn-secondary"/>
     </form>
 
     <form id="sign-in-form" class="sign-in-display hidden"> Sign-in
       <input name="credentials[email]" type="email" placeholder="Email" />
       <input name="credentials[password]" type="password" placeholder="Password" />
-      <input type="submit" value="Submit" class="submit"/>
+      <input type="submit" value="Submit" class="submit btn-secondary"/>
     </form>
 
     <!-- Change Password Modal -->
