--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           </div>
 
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-secondary close-modal">Close</button>
             <button type="submit" form="change-password-form" class="btn btn-primary">Submit</button>
           </div>
         </div>
