Adds required to needed form fields
- Adds required to all form fields sign-in/up and change password.

--- a/index.html
+++ b/index.html
@@ -64,15 +64,15 @@
     <button id="new-game-button" class=" btn btn-lg game-button hidden">New Game</button>
 
     <form id="sign-up-form" class="sign-up-display"> Sign-up
-      <input name="credentials[email]" type="email" placeholder="Email" />
-      <input name="credentials[password]" type="password" placeholder="Password" />
-      <input name="credentials[password_confirmation]" type="password" placeholder="password confirmation" />
+      <input name="credentials[email]" type="email" placeholder="Email" required/>
+      <input name="credentials[password]" type="password" placeholder="Password" required/>
+      <input name="credentials[password_confirmation]" type="password" placeholder="password confirmation" required/>
       <input type="submit" value="Submit" class="submit"/>
     </form>
 
     <form id="sign-in-form" class="sign-in-display hidden"> Sign-in
-      <input name="credentials[email]" type="email" placeholder="Email" />
-      <input name="credentials[password]" type="password" placeholder="Password" />
+      <input name="credentials[email]" type="email" placeholder="Email" required/>
+      <input name="credentials[password]" type="password" placeholder="Password" required/>
       <input type="submit" value="Submit" class="submit"/>
     </form>
 
@@ -89,8 +89,8 @@
 
           <div class="modal-body">
             <form id="change-password-form">
-              <input name="passwords[old]" type="password" placeholder="Old Password" />
-              <input name="passwords[new]" type="password" placeholder="New Password" />
+              <input name="passwords[old]" type="password" placeholder="Old Password" required/>
+              <input name="passwords[new]" type="password" placeholder="New Password" required/>
             </form>
             <div id="alert-message"></div>
           </div>
