--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             UserName
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a id="sign-out-link" class="dropdown-item" href="#">Sign-out</a>
-            <a class="dropdown-item" href="#" data-toggle="modal" data-target="#changePasswordModal">Change password</a>
+            <a id="sign-out-link" class="dropdown-item" href="#">Sign-Out</a>
+            <a class="dropdown-item" href="#" data-toggle="modal" data-target="#changePasswordModal">Change Password</a>
             <a id="user-stats-link"class="dropdown-item" href="#" data-toggle="modal" data-target="#userStatsModal">Game Stats</a>
           </div>
         </li>
@@ -66,7 +66,7 @@
     <form id="sign-up-form" class="sign-up-display"> Sign-up
       <input name="credentials[email]" type="email" placeholder="Email" required/>
       <input name="credentials[password]" type="password" placeholder="Password" required/>
-      <input name="credentials[password_confirmation]" type="password" placeholder="password confirmation" required/>
+      <input name="credentials[password_confirmation]" type="password" placeholder="Password Confirmation" required/>
       <input type="submit" value="Submit" class="submit"/>
     </form>
 
