Fixes disabled button bug
- While the new game button appeared disabled it was still functioning
- This commit adds the functions to disable the buttons functionality
- Adds spaces after colons to game stats viewer

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="notifications-window">
       <p class="notifications"></p>
     </div>
-    <button id="new-game-button" class=" btn btn-lg game-button hidden">New Game</button>
+    <button id="new-game-button" class="btn btn-lg game-button hidden">New Game</button>
 
     <form id="sign-up-form" class="sign-up-display"> Sign-up
       <input name="credentials[email]" type="email" placeholder="Email" required/>
@@ -115,7 +115,7 @@
           </div>
 
           <div id="user-stats-viewer" class="modal-body">
-
+            Loading...
           </div>
 
           <div class="modal-footer">
