Fixes Game Stats not clearing bug
- Adds a event handler for closing games stats Modal
- Clears stats and puts "loading..."
- Renames closeModal to be more specific as there is now a close
  modal function for both change password and stats modal.

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           </div>
 
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary close-modal">Close</button>
+            <button type="button" class="btn btn-secondary close-password-modal">Close</button>
             <button type="submit" form="change-password-form" class="btn btn-primary">Submit</button>
           </div>
         </div>
@@ -119,7 +119,7 @@
           </div>
 
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-secondary close-stats-modal">Close</button>
           </div>
         </div>
       </div>
